--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
     <title>Animais Fantásticos</title>
 </head>
 <body>
-    
+    <nav class="menu">
+        <ul>
+            <li>
+                <a href="#animals">Animais</a>
+            </li>
+            <li>
+                <a href="#faq">Faq</a>
+            </li>
+            <li>
+                <a href="#contact">Contato</a>
+            </li>
+            <li>
+                <a href="https://viniciussnitram.github.io/portfolio/">Dev →</a>
+            </li>
+        </ul>
+    </nav>
+
     <script src="script.js"></script>
 </body>
 </html>
