--- a/index.html
+++ b/index.html
@@ -25,6 +25,164 @@
         </ul>
     </nav>
 
+    <section class="grid-section animals" id="animals">
+        <h1 class="title">Animais Fantásticos</h1>
+        <ul>
+            <li>
+                <img src="img/imagem1.jpg" alt="Raposa de lado com floresta desfocada ao fundo">
+            </li>
+            <li>
+                <img src="img/imagem2.jpg" alt="Esquilo de frente com fundo verde desfocado">
+            </li>
+            <li>
+                <img src="img/imagem3.jpg" alt="Urso marrom caminhando e olhando de lado com floresta verde e montanha com neve de fundo">
+            </li>
+            <li>
+                <img src="img/imagem4.jpg" alt="Lobo com fundo cinza desfocado">
+            </li>
+            <li>
+                <img src="img/imagem5.jpg" alt="Orangotango de lado com mão no queixo">
+            </li>
+            <li>
+                <img src="img/imagem6.jpg" alt="Leão de frente com árvores de fundo">
+            </li>
+        </ul>
+
+        <div class="animals-description">
+            <section>
+                <h2>Raposa</h2>
+                <p>
+                    As raposas são animais mamíferos e onívoros pertencentes à família 
+                    Canidae. São vulpídeos de porte médio, caracterizados 
+                    por um focinho comprido e uma cauda longa e peluda.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+                <p>
+                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
+                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
+                    raposa vermelha é a mais comum.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+            </section>
+
+            <section>
+                <h2>Esquilo</h2>
+                <p>
+                    As raposas são animais mamíferos e onívoros pertencentes à família 
+                    Canidae. São vulpídeos de porte médio, caracterizados 
+                    por um focinho comprido e uma cauda longa e peluda.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+                <p>
+                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
+                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
+                    raposa vermelha é a mais comum.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+            </section>
+
+            <section>
+                <h2>Urso</h2>
+                <p>
+                    As raposas são animais mamíferos e onívoros pertencentes à família 
+                    Canidae. São vulpídeos de porte médio, caracterizados 
+                    por um focinho comprido e uma cauda longa e peluda.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+                <p>
+                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
+                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
+                    raposa vermelha é a mais comum.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+            </section>
+
+            <section>
+                <h2>Lobo</h2>
+                <p>
+                    As raposas são animais mamíferos e onívoros pertencentes à família 
+                    Canidae. São vulpídeos de porte médio, caracterizados 
+                    por um focinho comprido e uma cauda longa e peluda.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+                <p>
+                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
+                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
+                    raposa vermelha é a mais comum.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+            </section>
+
+            <section>
+                <h2>Macaco</h2>
+                <p>
+                    As raposas são animais mamíferos e onívoros pertencentes à família 
+                    Canidae. São vulpídeos de porte médio, caracterizados 
+                    por um focinho comprido e uma cauda longa e peluda.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+                <p>
+                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
+                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
+                    raposa vermelha é a mais comum.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+            </section>
+
+            <section>
+                <h2>Leão</h2>
+                <p>
+                    As raposas são animais mamíferos e onívoros pertencentes à família 
+                    Canidae. São vulpídeos de porte médio, caracterizados 
+                    por um focinho comprido e uma cauda longa e peluda.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+                <p>
+                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
+                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
+                    raposa vermelha é a mais comum.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+            </section>
+        </div>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
