--- a/index.html
+++ b/index.html
@@ -183,6 +183,37 @@
         </div>
     </section>
 
+    <section class="grid-section faq" id="faq">
+        <h1>FAQ</h1>
+        <dl>
+            <dt>Qual a idade dos animais?</dt>
+            <dd>
+                As raposas são animais mamíferos e onívoros pertencentes à família Canidae. 
+                São vulpídeos de porte médio, caracterizados por um focinho comprido e uma 
+                cauda longa e peluda.
+            </dd>
+
+            <dt>Eles são fantásticos?</dt>
+            <dd>
+                Também apresentam como particularidade suas pupilas ovais, semelhantes às 
+                pupilas verticais dos felídeos.
+            </dd>
+
+            <dt>Qual a diferença?</dt>
+            <dd>
+                As raposas são animais mamíferos e onívoros pertencentes à família Canidae. 
+                São vulpídeos de porte médio, caracterizados por um focinho comprido e uma 
+                cauda longa e peluda.
+            </dd>
+
+            <dt>Como proteger?</dt>
+            <dd>
+                Também apresentam como particularidade suas pupilas ovais, semelhantes às 
+                pupilas verticais dos felídeos.
+            </dd>
+        </dl>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
