feat: added the 'contact' content html semantical structure

--- a/index.html
+++ b/index.html
@@ -214,6 +214,20 @@
         </dl>
     </section>
 
+    <section class="grid-section contact" id="contact">
+        <h1>Contato</h1>
+        <div class="map">
+            <img src="img/mapa.png" alt="Mapa mostrando a localização">
+        </div>
+
+        <ul class="data">
+            <li>contato@animais-fantasticos.com</li>
+            <li>+55 (21) 99999-9999</li>
+            <li>Rua do Conde, nº 21</li>
+            <li>Rio de Janeiro - RJ</li>
+        </ul>
+    </section>
+
     <script src="script.js"></script>
 </body>
 </html>
