feat: added the 'footer' content html semantical structure

--- a/index.html
+++ b/index.html
@@ -223,10 +223,14 @@
         <ul class="data">
             <li>contato@animais-fantasticos.com</li>
             <li>+55 (21) 99999-9999</li>
-            <li>Rua do Conde, nº 21</li>
+            <li>Rua do Conde, n° 21</li>
             <li>Rio de Janeiro - RJ</li>
         </ul>
     </section>
+
+    <footer class="copy">
+        <p>Todos os direitos reservados.</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
