feat: stylized the faq content. changed colors, background, margin, grid-column, font-family, displya

--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
     </section>
 
     <section class="grid-section faq" id="faq">
-        <h1>FAQ</h1>
-        <dl>
+        <h1 class="title">FAQ</h1>
+        <dl class="faq-list">
             <dt>Qual a idade dos animais?</dt>
             <dd>
                 As raposas são animais mamíferos e onívoros pertencentes à família Canidae. 
@@ -218,7 +218,7 @@
     </section>
 
     <section class="grid-section contact" id="contact">
-        <h1>Contato</h1>
+        <h1 class="title">Contato</h1>
         <div class="map">
             <img src="img/mapa.png" alt="Mapa mostrando a localização">
         </div>
