--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Animais Fantásticos</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display+SC&display=swap" rel="stylesheet">
+    <script>document.documentElement.className += ' js';</script>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <title>Animais Fantásticos</title>
 </head>
 <body>
     <nav class="menu">
@@ -30,7 +31,7 @@
 
     <section class="grid-section animals" id="animals">
         <h1 class="title">Animais Fantásticos</h1>
-        <ul class="animals-list">
+        <ul class="animals-list js-tabmenu">
             <li>
                 <img src="img/imagem1.jpg" alt="Raposa de lado com floresta desfocada ao fundo">
             </li>
@@ -51,22 +52,13 @@
             </li>
         </ul>
 
-        <div class="animals-description">
+        <div class="animals-description js-tabcontent">
             <section>
                 <h2>Raposa</h2>
                 <p>
                     As raposas são animais mamíferos e onívoros pertencentes à família 
                     Canidae. São vulpídeos de porte médio, caracterizados 
                     por um focinho comprido e uma cauda longa e peluda.
-                </p>
-                <p>
-                    Também apresentam como particularidade suas pupilas ovais, 
-                    semelhantes às pupilas verticais dos felídeos.
-                </p>
-                <p>
-                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
-                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
-                    raposa vermelha é a mais comum.
                 </p>
                 <p>
                     Também apresentam como particularidade suas pupilas ovais, 
@@ -94,6 +86,15 @@
                     Também apresentam como particularidade suas pupilas ovais, 
                     semelhantes às pupilas verticais dos felídeos.
                 </p>
+                <p>
+                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
+                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
+                    raposa vermelha é a mais comum.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
             </section>
 
             <section>
@@ -102,15 +103,6 @@
                     As raposas são animais mamíferos e onívoros pertencentes à família 
                     Canidae. São vulpídeos de porte médio, caracterizados 
                     por um focinho comprido e uma cauda longa e peluda.
-                </p>
-                <p>
-                    Também apresentam como particularidade suas pupilas ovais, 
-                    semelhantes às pupilas verticais dos felídeos.
-                </p>
-                <p>
-                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
-                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
-                    raposa vermelha é a mais comum.
                 </p>
                 <p>
                     Também apresentam como particularidade suas pupilas ovais, 
@@ -138,6 +130,15 @@
                     Também apresentam como particularidade suas pupilas ovais, 
                     semelhantes às pupilas verticais dos felídeos.
                 </p>
+                <p>
+                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
+                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
+                    raposa vermelha é a mais comum.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
             </section>
 
             <section>
@@ -151,15 +152,6 @@
                     Também apresentam como particularidade suas pupilas ovais, 
                     semelhantes às pupilas verticais dos felídeos.
                 </p>
-                <p>
-                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
-                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
-                    raposa vermelha é a mais comum.
-                </p>
-                <p>
-                    Também apresentam como particularidade suas pupilas ovais, 
-                    semelhantes às pupilas verticais dos felídeos.
-                </p>
             </section>
 
             <section>
@@ -168,6 +160,15 @@
                     As raposas são animais mamíferos e onívoros pertencentes à família 
                     Canidae. São vulpídeos de porte médio, caracterizados 
                     por um focinho comprido e uma cauda longa e peluda.
+                </p>
+                <p>
+                    Também apresentam como particularidade suas pupilas ovais, 
+                    semelhantes às pupilas verticais dos felídeos.
+                </p>
+                <p>
+                    De cerca de 40 espécies reconhecidas como raposas, somente 12 
+                    pertencem ao gênero Vulpes das "raposas verdadeiras", do qual a 
+                    raposa vermelha é a mais comum.
                 </p>
                 <p>
                     Também apresentam como particularidade suas pupilas ovais, 
