--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
     <section class="grid-section faq" id="faq">
         <h1 class="title">FAQ</h1>
-        <dl class="faq-list">
+        <dl class="faq-list js-accordion">
             <dt>Qual a idade dos animais?</dt>
             <dd>
                 As raposas são animais mamíferos e onívoros pertencentes à família Canidae. 
