--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </ul>
     </nav>
 
-    <section class="grid-section animals" id="animals">
+    <section class="grid-section animals js-scroll" id="animals">
         <h1 class="title">Animais Fantásticos</h1>
         <ul class="animals-list js-tabmenu">
             <li>
@@ -187,7 +187,7 @@
         </div>
     </section>
 
-    <section class="grid-section faq" id="faq">
+    <section class="grid-section faq js-scroll" id="faq">
         <h1 class="title">FAQ</h1>
         <dl class="faq-list js-accordion">
             <dt>Qual a idade dos animais?</dt>
@@ -218,7 +218,7 @@
         </dl>
     </section>
 
-    <section class="grid-section contact" id="contact">
+    <section class="grid-section contact js-scroll" id="contact">
         <h1 class="title">Contato</h1>
         <div class="map">
             <img src="img/mapa.png" alt="Mapa mostrando a localização">
