refactor: added data-anime='show-right' or data-anime='show-down' to the HTML sections to manipulate and animate those sections with JavaScript and CSS, according to the data attribute the section appears from top to bottom or from left to right

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
             </li>
         </ul>
 
-        <div class="animals-description js-tabcontent">
-            <section>
+        <div class="animals-description" data-tab="content">
+            <section data-anime="show-right">
                 <h2>Raposa</h2>
                 <p>
                     As raposas são animais mamíferos e onívoros pertencentes à família 
@@ -66,7 +66,7 @@
                 </p>
             </section>
 
-            <section>
+            <section data-anime="show-right">
                 <h2>Esquilo</h2>
                 <p>
                     As raposas são animais mamíferos e onívoros pertencentes à família 
@@ -97,7 +97,7 @@
                 </p>
             </section>
 
-            <section>
+            <section data-anime="show-down">
                 <h2>Urso</h2>
                 <p>
                     As raposas são animais mamíferos e onívoros pertencentes à família 
@@ -110,7 +110,7 @@
                 </p>
             </section>
 
-            <section>
+            <section data-anime="show-down">
                 <h2>Lobo</h2>
                 <p>
                     As raposas são animais mamíferos e onívoros pertencentes à família 
@@ -141,7 +141,7 @@
                 </p>
             </section>
 
-            <section>
+            <section data-anime="show-right">
                 <h2>Macaco</h2>
                 <p>
                     As raposas são animais mamíferos e onívoros pertencentes à família 
@@ -154,7 +154,7 @@
                 </p>
             </section>
 
-            <section>
+            <section data-anime="show-right">
                 <h2>Leão</h2>
                 <p>
                     As raposas são animais mamíferos e onívoros pertencentes à família 
