refactor: changed all the classes where starts with 'js-' to data attributes

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <nav class="menu js-menu">
+    <nav class="menu" data-menu="smooth">
         <ul>
             <li>
                 <a href="#animals">Animais</a>
@@ -29,9 +29,9 @@
         </ul>
     </nav>
 
-    <section class="grid-section animals js-scroll" id="animals">
+    <section class="grid-section animals" data-anime="scroll" id="animals">
         <h1 class="title">Animais Fantásticos</h1>
-        <ul class="animals-list js-tabmenu">
+        <ul class="animals-list" data-tab="menu">
             <li>
                 <img src="img/imagem1.jpg" alt="Raposa de lado com floresta desfocada ao fundo">
             </li>
@@ -187,9 +187,9 @@
         </div>
     </section>
 
-    <section class="grid-section faq js-scroll" id="faq">
+    <section class="grid-section faq" data-anime="scroll" id="faq">
         <h1 class="title">FAQ</h1>
-        <dl class="faq-list js-accordion">
+        <dl class="faq-list js-accordion" data-anime="accordion">
             <dt>Qual a idade dos animais?</dt>
             <dd>
                 As raposas são animais mamíferos e onívoros pertencentes à família Canidae. 
@@ -218,7 +218,7 @@
         </dl>
     </section>
 
-    <section class="grid-section contact js-scroll" id="contact">
+    <section class="grid-section contact" data-anime="scroll" id="contact">
         <h1 class="title">Contato</h1>
         <div class="map">
             <img src="img/mapa.png" alt="Mapa mostrando a localização">
