feat: added the Semantic HTML of modal

--- a/index.html
+++ b/index.html
@@ -236,6 +236,20 @@
         <footer class="copy">
             <p>Todos os direitos reservados.</p>
         </footer>
+    </div>
+
+    <section class="modal-container" data-modal="container">
+        <div class="modal">
+            <button data-modal="close" class="close">X</button>
+            <form action="">
+                <label for="email">Email</label>
+                <input type="text" for="email" id="email">
+                <label for="password">Senha</label>
+                <input type="password" name="password" id="password">
+                <button type="submit">Entrar</button>
+            </form>
+        </div>
+    </section>
 
     <script type="module" src="./js/script.js"></script>
 </body>
