feat: added a data-set and aria-label 'Endereço próximo ao estacionamento' to the parent div of map img to make a tooltip with css and javascript

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
         <section class="grid-section contact" data-anime="scroll" id="contact">
             <h1 class="title">Contato</h1>
-            <div class="map">
+            <div class="map" data-tooltip aria-label="Endereço próximo ao estacionamento">
                 <img src="img/mapa.png" alt="Mapa mostrando a localização">
             </div>
 
