--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
                 <li>
                     <a href="#animals">Animais</a>
                 </li>
+                <li data-dropdown>
+                    <a href="sobre.html">Sobre</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="empresa.html">A empresa</a></li>
+                        <li><a href="equipe.html">Equipe</a></li>
+                        <li><a href="socios.html">Sócios</a></li>
+                        <li><a href="investidores.html">Investidores</a></li>
+                    </ul>
+                </li>
                 <li>
                     <a href="#faq">Faq</a>
                 </li>
