--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 <body>
     <div class="grid-container">
         <nav class="menu" data-menu="smooth">
-            <ul>
+            <button data-menu="button" aria-expanded="false" aria-controls="menu">Menu</button>
+            <ul data-menu="list" id="menu">
                 <li>
                     <a href="#animals">Animais</a>
                 </li>
