--- a/index.html
+++ b/index.html
@@ -262,6 +262,7 @@
                 <li>+55 (21) 99999-9999</li>
                 <li>Rua do Conde, n° 21</li>
                 <li>Rio de Janeiro - RJ</li>
+                <li data-week="1,2,3,4,5" data-hour="8,18">Seg à Sex das 08h às 18h</li>
             </ul>
         </section>
 
