feat: added a new list-item to show a way to donate bitcoin to the place.

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
                 <li>+55 (21) 99999-9999</li>
                 <li>Rua do Conde, n° 21</li>
                 <li>Rio de Janeiro - RJ</li>
+                <li>Doe <span class="btc-price">0</span> Bitcoin para nos ajudar</li>
                 <li data-week="1,2,3,4,5" data-hour="8,18">Seg à Sex das 08h às 18h</li>
             </ul>
         </section>
